<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My profile</string>
    <string name="ameen_essa"><b>Ameen</b> Essa</string>
    <string name="track_android"><b>Track:</b> Android</string>
    <string name="email_ameenahmed386_gmail_com"><b>Email:</b> ameenahmed386@gmail.com</string>
    <string name="country_egypt"><b>Country:</b> Egypt</string>
    <string name="phone_no_201023267057"><b>Phone Number:</b> +201023267057</string>
</resources>
